# CPPlab

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myerror.cpp  myerror.h  mytextbrowser.cpp  mytextbrowser.h  secondwindow.cpp  secondwindow.h  secondwindow.ui
headers/: Colors.h  Constants.h  abstractreader.h  car.h  csvreader.h  csvwriter.h  jsonreader.h  query.h  splitFunc.h  truck.h
sources/: Filters.cpp  abstractreader.cpp  car.cpp  csvreader.cpp  csvwriter.cpp  jsonreader.cpp  query.cpp  splitFunc.cpp  truck.cpp
